# rchat

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  LICENSE.txt  README.md  README_en.md  docker-compose.yml  docker_builder.py  nginx.conf  package.json  pnpm-lock.yaml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/aop_macro/: Cargo.toml
backend/aop_macro/src/: lib.rs
backend/config/: app.default.toml  app.dev.toml  app.prod.toml  app.test.toml  config.dev.toml  config.prod.toml
backend/public/: ws.html
backend/src/: main.rs
backend/src/app_config/: mod.rs
backend/src/controller/: chat_ctl.rs  file_ctl.rs  ip_ctl.rs  mod.rs
backend/src/domain/: mod.rs  website_config.rs
backend/src/dto/: chat_message_entity.rs  mod.rs
backend/src/middleware/: mod.rs  redis.rs
backend/src/model/: chat_files.rs  chat_media.rs  chat_message.rs  chat_room.rs  chat_website.rs  ip_detail.rs  mod.rs
backend/src/router/: mod.rs
backend/src/schedule/: job.rs  mod.rs
backend/src/service/: chat_service.rs  ip_service.rs  mod.rs  room_message_state.rs
backend/src/utils/: date_utils.rs  mod.rs  oss_utils.rs
backend/src/wsserver/: mod.rs  server.rs  session.rs
backend/static/: load.js
chat-backend/src/: main.rs
chat-backend/src/wsserver/: session.rs
chat-front/: README.md  index.html  load.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vite.config.ts.timestamp-1716350075202-3a82dd21e93cd.mjs
chat-front/integration/: index.html
chat-front/src/: App.vue  main.ts
chat-front/src/api/: chat.ts
chat-front/src/assets/: main.css
chat-front/src/components/: ChatMessage.vue  ChatModal.vue  ChatWindow.vue  ImagePreview.vue
chat-front/src/stores/: messageStore.ts
chat-front/src/utils/: commonUtil.ts  cookiesUtil.ts  http.ts  websocketService.ts
frontend/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
frontend/locales/: vn.yaml  zh-CN.yaml
frontend/mock/: asyncRoutes.ts
frontend/public/: platform-config.json
frontend/src/: main.ts
frontend/src/api/: user.ts  website.ts
frontend/src/components/ReIcon/src/: offlineIcon.ts
frontend/src/layout/components/lay-navbar/: index.vue
frontend/src/layout/components/lay-sidebar/: NavVertical.vue
frontend/src/layout/components/lay-sidebar/components/: SidebarItem.vue
frontend/src/layout/hooks/: useTranslationLang.ts
frontend/src/plugins/: i18n.ts
frontend/src/router/modules/: chat.ts  home.ts
frontend/src/store/: types.ts
frontend/src/store/modules/: chatWindow.ts  messages.ts  site.ts  user.ts
frontend/src/utils/: auth.ts  browserNotify.ts  commonUtil.ts  websocketService.ts
frontend/src/utils/http/: index.ts
frontend/src/views/login/: index.vue
frontend/src/views/permission/page/: index.vue
frontend/src/views/website/: ChatList.vue  ChatModal.vue  ChatSummary.vue  ImagePreview.vue
frontend/src/views/welcome/: index.vue
frontend/src/views/welcome/components/: CodeBox.vue
