[package]
name = "backend"
description = "Customer Service, Livechat Service."
version = "0.1.0"
rust-version = "1.75"
edition = "2021"
publish = false

[dependencies]
tracing = "0.1.40"

[dependencies.actix-web]
version = "4.5.1"
default-features = false

[dependencies.serde]
version = "1.0.201"
features = ["derive"]

[dependencies.zino]
version = "0.21.4"
features = [
    "actix",
    "i18n",
    "jwt",
    "orm",
]

[dependencies.zino-core]
version = "0.22.4"
features = [
    "cookie",
    "env-filter",
    "orm-postgres",
    "view-minijinja",
]

[dependencies.zino-derive]
version = "0.19.4"

[dependencies.zino-model]
version = "0.19.4"
