[package]
name = "backend"
description = "Customer Service, Livechat Service."
version = "0.1.0"
rust-version = "1.75"
edition = "2021"
publish = false

[dependencies]
lazy_static = "1.4.0"
tracing = "0.1.40"
actix = "0.13.3"
actix-web-actors="4.3.0"

actix-files = "0.6"
futures = "0.3"
serde_json = "1.0"
rand = "0.8"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.37.0", features = ["full"] }
anyhow= "1.0.86"

[dependencies.actix-web]
version = "4.6.0"
default-features = false

[dependencies.serde]
version = "1.0.201"
features = ["derive"]


[dependencies.zino]
# version = "0.22.0"
git = "https://github.com/AdairStone/zino.git"
branch = "main"
# path = "zino"
features = [
    "actix",
    "i18n",
    "jwt",
    "orm",
]
[dependencies.zino-core]
git = "https://github.com/AdairStone/zino.git"
branch = "main"
# path = "zino-core"
features = [
    "cookie",
    "env-filter",
    "orm-postgres",
    "view-minijinja",
]
[dependencies.zino-derive]
git = "https://github.com/AdairStone/zino.git"
branch = "main"
# path = "zino-derive"

[dependencies.zino-model]
git = "https://github.com/AdairStone/zino.git"
branch = "main"
# path = "zino-model"