[package]
name = "backend"
description = "Customer Service, Livechat Service."
version = "0.1.0"
rust-version = "1.75"
edition = "2021"
publish = false

[dependencies]
lazy_static = "1.4.0"
tracing = "0.1.40"
actix = "0.13.3"
actix-web-actors="4.3.0"
cookie = "0.18.1"
actix-files = "0.6"
futures = "0.3"
serde_json = "1.0"
rand = "0.8"
env_logger = "0.11"
log = "0.4"
tokio = { version = "1.40.0", features = ["full"] }
anyhow= "1.0.86"
aop_macro = { path = "./aop_macro" }
uuid = "1.8.0"
tera = "1.20.0"
redis = "0.26.1"
deadpool-redis = "0.16.0"
chrono = "0.4.23"
once_cell = "1.9"
futures-util-preview = "0.2.2"

reqwest = { version = "0.12.7", features = ["json","stream"] }
hmac = "0.12.1"
sha1 = "0.10.6"
base64 = "0.22.1"
httpdate = "1.0.3"

config = "0.14.0"
urlencoding = "2.1.3"
dotenvy = "0.15.7"

opendal = {version="0.49.1", features=["services-oss"]}


[dependencies.actix-web]
version = "4.6.0"
default-features = false

[dependencies.serde]
version = "1.0.208"
features = ["derive"]


[dependencies.zino]
# version = "0.22.0"
git = "https://github.com/AdairStone/zino.git"
branch = "main"
# path = "zino"
features = [
    "actix",
    "i18n",
    "jwt",
    "orm",
]
[dependencies.zino-core]
git = "https://github.com/AdairStone/zino.git"
branch = "main"
# path = "zino-core"
features = [
    "cookie",
    "env-filter",
    "orm-postgres",
    "view-minijinja",
]
[dependencies.zino-derive]
git = "https://github.com/AdairStone/zino.git"
branch = "main"
# path = "zino-derive"

[dependencies.zino-model]
git = "https://github.com/AdairStone/zino.git"
branch = "main"
# path = "zino-model"